testdata/baselines/reference/submodule/compiler/unusedTypeParameters_templateTag.errors.txt
/a.js(1,15): error TS6133: 'T' is declared but its value is never read.


==== /a.js (1 errors) ====
    /** @template T */
                  ~
!!! error TS6133: 'T' is declared but its value is never read.
    function f() {}
    